# vived-rs

./: Cargo.toml  check.sh  run.sh
bot/: Cargo.toml
bot/src/: main.rs
my_bot/: .gitignore  Cargo.toml
vived/: Cargo.toml
vived/src/: lib.rs
vived/vived/: Cargo.toml
vived/vived/src/: lib.rs
vived/vived_api/: Cargo.toml
vived/vived_api/src/: client.rs  endpoints.rs  lib.rs
vived/vived_api/src/endpoints/: channels.rs  messages.rs  mod.rs  server.rs
vived/vived_models/: Cargo.toml
vived/vived_models/src/: channel.rs  color.rs  embed.rs  ids.rs  lib.rs  message.rs  server.rs
vived/vived_websocket/: Cargo.toml
vived/vived_websocket/src/: client.rs  events.rs  lib.rs
vived_api/: Cargo.toml
vived_api/src/: endpoints.rs  lib.rs
vived_modals/: Cargo.toml
vived_modals/src/: ids.rs  lib.rs  message.rs
