[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vived = {path = "../vived/vived"}
tokio = {version = "*", features = ["macros", "rt-multi-thread", "rt"]}

env_logger = "0.9"
chrono = "0.4"