[package]
name = "vived"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vived_models = {path = "../vived_models"}
vived_api = {path = "../vived_api"}
vived_websocket = {path = "../vived_websocket"}
