[package]
name = "vived"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vived_models = {path = "../vived_models"}
vived_api = {path = "../vived_api", optional = true}
vived_websocket = {path = "../vived_websocket", optional = true}


[features]
default = ["api", "websocket"]
api = ["dep:vived_api"]
websocket = ["dep:vived_websocket"]