[package]
name = "vived_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vived_models = {path = "../vived_models"}

log = {workspace = true}
# We could replace the large tokio with async_lock
# BUT reqwest already uses tokio, so we actually save entires in the dependency tree
tokio = {workspace = true, features = ["sync"]}
reqwest = {version = "0.11", features = ["json", "rustls-tls"]}

serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
chrono = {workspace = true}

rustc_version_runtime = "0.1.*"
version = "3.0"

[dev-dependencies]
tokio = {workspace = true, features = ["rt", "macros"]}
